@@ -17,6 +17,7 @@
         <CheckBox fx:id="enableEmitters" mnemonicParsing="false" text="Enable emitters" />
         <DoubleAdjuster fx:id="emitterIntensity" maxWidth="1.7976931348623157E308" />
         <CheckBox fx:id="enableSunlight" mnemonicParsing="false" text="Enable sunlight" />
+        <CheckBox fx:id="drawSun" mnemonicParsing="false" text="Draw sun" />
         <DoubleAdjuster fx:id="sunIntensity" maxWidth="1.7976931348623157E308" />
         <AngleAdjuster fx:id="sunAzimuth" />
         <AngleAdjuster fx:id="sunAltitude" />
